# samplelink-model

./: .gitignore  AUTHORS  Makefile  README.md  _config.yml  index.md  notes.md  release-instructions.md  samplelink-model.yaml  setup.cfg  setup.py  setup_ubuntu.sh  tox.ini
.github/ISSUE_TEMPLATE/: additions-or-modifications-to-mappings-in-samplelink-model.md  bug_report.md  improvements-or-modifications-to-the-samplelink-model.md  question.md
.github/workflows/: deploy-documentation.yml  regenerate-artifacts.yml
about/: mapping-neo4j.md  mapping-rdf.md
contrib/: README.md  class_extensions.yaml  closures.yaml  core.yaml  go.yaml  monarch.yaml  taxon.yaml  translator.yaml
guidelines/: README.md  curating-the-model.md  faq.md  maintaining-the-model.md  understanding-the-model.md  using-the-modeling-language.md  working-with-the-model.md
notebooks/: schemaloader.ipynb
rules/: property-chains.yaml
samplelink/: __init__.py  model.py
script/: jekyllmarkdowngen.py  predicate_review.py
tests/: test_pythongen.py  test_samplelink_model.py
