[metadata]
name = samplelink_model
description = 'A high level datamodel of computer systems ontology entities and associations'
version = 0.0.1
url = https://github.com/linkmodel/samplelink-model
author = Noel McLoughlin
author-email = noel.mcloughlin@gmail.com
summary = Samplelink Model
home-page = https://linkmodel.github.io/samplelink-model/docs/
license = CC0 1.0 Universal
python-requires = >=3.7
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    Samplelink
    Datamodel

[files]
packages =
    samplelink
